skaffold_deploy/02-traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v2.8
          args:
            - --api.insecure
            - --providers.kubernetesingress
            - --entryPoints.http.address=:3100
            - --entryPoints.traefik.address=:3200
          ports:
            - name: web
              containerPort: 3100
            - name: dashboard
              containerPort: 3200
