skaffold_deploy/admin_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: systems-admin
  labels:
    app: systems-admin
spec:
  ports:
  - port: 3500
    protocol: TCP
  clusterIP: None
  selector:
    app: systems-admin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: systems-admin
  labels:
    app: systems-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: systems-admin
  template:
    metadata:
      labels:
        app: systems-admin
    spec:
      containers:
      - name: systems-admin
        image: systems-admin
        ports:
            - name: http
              containerPort: 80
              protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping.json
            port: 8080
          initialDelaySeconds: 85
          timeoutSeconds: 4
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /ping.json
            port: 8080
          initialDelaySeconds: 70
          timeoutSeconds: 4
          periodSeconds: 30
