skaffold_deploy/api_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
  clusterIP: None
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: api
        ports:
            - name: http
              containerPort: 8080
              protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping.json
            port: 8080
          initialDelaySeconds: 40
          timeoutSeconds: 10
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /ping.json
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 10
          periodSeconds: 30
      - name: api-sidekiq
        image: api
        ports:
          - name: http
            containerPort: 7433
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 7433
          initialDelaySeconds: 65
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 7433
          initialDelaySeconds: 70
          periodSeconds: 14
        command:
        - "./run_sidekiq.sh"
