skaffold_deploy/atos_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: atos
  labels:
    app: atos
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
  clusterIP: None
  selector:
    app: atos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atos
  labels:
    app: atos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atos
  template:
    metadata:
      labels:
        app: atos
    spec:
      containers:
      - name: atos
        image: atos
        ports:
            - name: http
              containerPort: 8080
              protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping.json
            port: 8080
          initialDelaySeconds: 40
          timeoutSeconds: 10
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /ping.json
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 60
