skaffold_deploy/azurite-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: azurite
  name: azurite
spec:
  ports:
    - name: "web"
      port: 10000
      targetPort: 10000
  selector:
    io.kompose.service: azurite
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: azurite
  name: azurite
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: azurite
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/et_full_system: "true"
        io.kompose.service: azurite
    spec:
      containers:
        - image: touchify/azurite:2.7
          name: azurite
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: azure-storage-data
      restartPolicy: Always
      volumes:
        - name: azure-storage-data
          persistentVolumeClaim:
            claimName: azure-storage-data
status: {}
