skaffold_deploy/et1_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: et1
  labels:
    app: et1
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
  clusterIP: None
  selector:
    app: et1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: et1
  labels:
    app: et1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: et1
  template:
    metadata:
      labels:
        app: et1
    spec:
      containers:
      - name: et1
        image: et1
        ports:
            - name: http
              containerPort: 8080
              protocol: TCP
        livenessProbe:
          httpGet:
            path: apply/ping.json
            port: 8080
          initialDelaySeconds: 85
          timeoutSeconds: 4
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: apply/ping.json
            port: 8080
          initialDelaySeconds: 70
          timeoutSeconds: 4
          periodSeconds: 30
      - name: et1-sidekiq
        image: et1
        ports:
          - name: http
            containerPort: 7433
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 7433
          initialDelaySeconds: 20
          periodSeconds: 120
        readinessProbe:
          httpGet:
            path: /
            port: 7433
          initialDelaySeconds: 10
          periodSeconds: 120
        command:
          - "./run_sidekiq.sh"
