skaffold_deploy/et3_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: et3
  labels:
    app: et3
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
  clusterIP: None
  selector:
    app: et3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: et3
  labels:
    app: et3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: et3
  template:
    metadata:
      labels:
        app: et3
    spec:
      containers:
      - name: et3
        image: et3
        ports:
            - name: http
              containerPort: 8080
              protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping.json
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 2
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /ping.json
            port: 8080
          initialDelaySeconds: 50
          timeoutSeconds: 2
          periodSeconds: 30
