skaffold_deploy/et_ccd_export_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: et-ccd-export
  labels:
    app: et-ccd-export
spec:
  clusterIP: None
  selector:
    app: et-ccd-export
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: et-ccd-export
  labels:
    app: et-ccd-export
spec:
  replicas: 1
  selector:
    matchLabels:
      app: et-ccd-export
  template:
    metadata:
      labels:
        app: et-ccd-export
    spec:
      containers:
      - name: et-ccd-export
        image: et-ccd-export
        ports:
          - name: http
            containerPort: 7433
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 7433
          initialDelaySeconds: 65
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: 7433
          initialDelaySeconds: 70
          periodSeconds: 14
