skaffold_deploy/fake_services_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fake-services
  labels:
    app: fake-services
spec:
  ports:
  - name: acas-web
    port: 9000
    protocol: TCP
  - name: ccd-web
    port: 9100
    protocol: TCP
  - name: notify-web
    port: 9200
    protocol: TCP
  clusterIP: None
  selector:
    app: fake-services
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-services
  labels:
    app: fake-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fake-services
  template:
    metadata:
      labels:
        app: fake-services
    spec:
      containers:
      - name: fake-services
        image: fake-services
        ports:
        - name: acas-web
          containerPort: 9000
          protocol: TCP
        - name: ccd-web
          containerPort: 9100
          protocol: TCP
        - name: notify-web
          containerPort: 9200
          protocol: TCP
