skaffold_deploy/azurite_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azurite-ingress
spec:
  rules:
    - host: azure_blob_storage.et.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: azurite
                port:
                  name: web
