skaffold_deploy/et1_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: et1-ingress
spec:
  rules:
    - host: et1.et.192.168.0.44.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: et1
                port:
                  name: web
