skaffold_deploy/mailhog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog-ingress
spec:
  rules:
    - host: mail.et.192.168.0.44.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  name: web
